--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="downloads/LewisH_Resume_SP21_v2.pdf" download="LewisH_resume" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Resmu&eacute;
+                        <i class="fa fa-download"></i> Download Resum&eacute;
                     </a>
                 </div>
             </div>
