--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am a recent graduate of the University of Virginia, where I obtained my PhD in Astronomy. I am currently a student at <a href="https://www.thisismetis.com/bootcamps/online-machine-learning-bootcamp"> Metis</a>, where I am completing the Data Science and Machine Learning Bootcamp.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
