--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -281,9 +281,11 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
+    /*border: solid 2px #fff;*/
+    border: solid 2px #{{ site.color.primary }};
     font-size: 20px;
-    color: #fff;
+    /*color: #fff;*/
+    color: #{{ site.color.primary }};
     background: 0 0;
     transition: all .3s ease-in-out;
 }
