--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -282,10 +282,10 @@ section.success {
 .btn-outline {
     margin-top: 15px;
     /*border: solid 2px #fff;*/
-    border: solid 2px #{{ site.color.primary }};
+    border: solid 2px #{{ site.color.secondary }};
     font-size: 20px;
     /*color: #fff;*/
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.secondary }};
     background: 0 0;
     transition: all .3s ease-in-out;
 }
@@ -295,7 +295,7 @@ section.success {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.secondary-dark }};
     background: #fff;
 }
 
