--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -294,7 +294,7 @@ section.success {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #fff;
+    border: solid 2px #{{ site.color.secondary-dark }};
     color: #{{ site.color.secondary-dark }};
     background: #fff;
 }
