--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="downloads/LewisH_Resume_SP21_v2.pdf" download="LewisH_resume" class="btn btn-lg btn-outline">
+                    <a href="downloads/LewisH_Resume.pdf" download="LewisH_resume" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Resum&eacute;
                     </a>
                 </div>
