center contact text

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -17,7 +17,7 @@
 		                    {% endfor %}
                         </p>
                     </div>-->
-                    <div class="footer-col col-lg-12">
+                    <div class="footer-col col-lg-12 text-center">
                         <h3>{{ site.footer.social }}</h3>
                         <ul class="list-inline">
                             {% for network in site.social %}
