--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,9 +22,7 @@
                         <ul class="list-inline">
                             {% for network in site.social %}
                             <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline">
-                                  <i class="fa fa-fw fa-{{ network.title }}"></i> {{ network.title }}
-                                </a>
+                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i>{{ network.title }}</a>
                             </li>
 		                    {% endfor %}
                         </ul>
