--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -294,8 +294,8 @@ section.success {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #{{ site.color.secondary-dark }};
-    color: #{{ site.color.secondary-dark }};
+    border: solid 2px #{{ site.color.primary }};
+    color: #{{ site.color.primary }};
     background: #fff;
 }
 
