add social site labels

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,7 +22,9 @@
                         <ul class="list-inline">
                             {% for network in site.social %}
                             <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i> {{ network.title }} </a>
+                                <a href="{{ network.url }}" class="btn-social btn-outline">
+                                  <i class="fa fa-fw fa-{{ network.title }}"></i> {{ network.label }}
+                                </a>
                             </li>
 		                    {% endfor %}
                         </ul>
