--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -23,7 +23,7 @@
                             {% for network in site.social %}
                             <li>
                                 <a href="{{ network.url }}" class="btn-social btn-outline">
-                                  <i class="fa fa-fw fa-{{ network.title }}"></i> {{ network.label }}
+                                  <i class="fa fa-fw fa-{{ network.title }}"></i>
                                 </a>
                             </li>
 		                    {% endfor %}
