update about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am a recent graduate of the University of Virginia, where I obtained my PhD in Astronomy. I am currently a student at <a href="https://www.thisismetis.com/bootcamps/online-machine-learning-bootcamp"> Metis</a>, where I am completing the Data Science and Machine Learning Bootcamp.</p>
+                    <p>I am a recent graduate of the University of Virginia, where I obtained my PhD in Astronomy. I am a self-motivated learner and goal-oriented researcher, with a strong proficiency in Python, and five years of experience in independent research. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Now, I am a student in the Data Science and Machine Learning Bootcamp at <a href="https://www.thisismetis.com/bootcamps/online-machine-learning-bootcamp"> Metis</a>, and am on the job market! This website highlights some of my science research and ongoing data science projects. Please reach out to me on <a href="https://www.linkedin.com/in/hmlewis-astro/"> LinkedIn</a> with any questions. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="downloads/LewisH_Resume.pdf" download="LewisH_resume" class="btn btn-lg btn-outline">
