edit about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>I am a recent graduate of the University of Virginia, where I obtained my PhD in Astronomy. I am a self-motivated learner and goal-oriented researcher, with a strong proficiency in Python, and five years of experience in independent research. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Now, I am a student in the Data Science and Machine Learning Bootcamp at <a href="https://www.thisismetis.com/bootcamps/online-machine-learning-bootcamp"> Metis</a>, and am on the job market! This website highlights some of my science research and ongoing data science projects. Please reach out to me on <a href="https://www.linkedin.com/in/hmlewis-astro/"> LinkedIn</a> with any questions. </p>
+                    <p>Currently, I am a student in the Data Science and Machine Learning Bootcamp at <a href="https://www.thisismetis.com/bootcamps/online-machine-learning-bootcamp"> Metis</a>, and am looking for opportunities in data science at small, growing companies! This website highlights some of my science research and ongoing data science projects. Please reach out to me on <a href="https://www.linkedin.com/in/hmlewis-astro/"> LinkedIn</a> with any questions. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="downloads/LewisH_Resume.pdf" download="LewisH_resume" class="btn btn-lg btn-outline">
