add link option to posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
     <!-- Google verification -->
     {% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
 
+    {% if site.google_analytics %}<meta name="google-analytics" content="{{ site.google_analytics }}">{% endif %}
+
     <!-- Bing Verification -->
     {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
