--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -19,7 +19,7 @@
                                 <p>{{ post.description }}</p>
                             {% endif %}
                             {% if post.md %}
-                                <p>{{ post.md }}</p>
+                                <p  style="text-align:justify">{{ post.md }}</p>
                             {% endif %}
                             <ul class="list-inline item-details">
                                 {% if post.link %}
