--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -19,7 +19,7 @@
                                 <p style="text-align:justify">{{ post.description }}</p>
                             {% endif %}
                             {% if post.md %}
-                                <p style="text-align:justify">{{ post.md }}</p>
+                                <p style="text-align:justify; font-size:90%;">{{ post.md }}</p>
                             {% endif %}
                             <ul class="list-inline item-details">
                                 {% if post.link %}
@@ -36,7 +36,7 @@
                                 {% endif %}
                                 {% if post.project-date %}
                                     <li>Date:
-                                        <strong><a>{{ post.project-date }}</a>
+                                        <strong>{{ post.project-date }}
                                         </strong>
                                     </li>
                                 {% endif %}
